tests/rustdoc-ui/bad-render-options.stderr
error[E0539]: malformed `doc` attribute input
  --> $DIR/bad-render-options.rs:3:1
   |
LL | #![doc(html_favicon_url)]
   | ^^^^^^^----------------^^
   |        |
   |        expected this to be of the form `html_favicon_url = "..."`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #![doc(html_favicon_url)]
LL + #![doc = "string"]
   |
LL - #![doc(html_favicon_url)]
LL + #![doc(hidden)]
   |
LL - #![doc(html_favicon_url)]
LL + #![doc(inline)]
   |
LL - #![doc(html_favicon_url)]
LL + #![doc(test)]
   |

error[E0539]: malformed `doc` attribute input
  --> $DIR/bad-render-options.rs:6:1
   |
LL | #![doc(html_logo_url)]
   | ^^^^^^^-------------^^
   |        |
   |        expected this to be of the form `html_logo_url = "..."`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #![doc(html_logo_url)]
LL + #![doc = "string"]
   |
LL - #![doc(html_logo_url)]
LL + #![doc(hidden)]
   |
LL - #![doc(html_logo_url)]
LL + #![doc(inline)]
   |
LL - #![doc(html_logo_url)]
LL + #![doc(test)]
   |

error[E0539]: malformed `doc` attribute input
  --> $DIR/bad-render-options.rs:9:1
   |
LL | #![doc(html_playground_url)]
   | ^^^^^^^-------------------^^
   |        |
   |        expected this to be of the form `html_playground_url = "..."`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #![doc(html_playground_url)]
LL + #![doc = "string"]
   |
LL - #![doc(html_playground_url)]
LL + #![doc(hidden)]
   |
LL - #![doc(html_playground_url)]
LL + #![doc(inline)]
   |
LL - #![doc(html_playground_url)]
LL + #![doc(test)]
   |

error[E0539]: malformed `doc` attribute input
  --> $DIR/bad-render-options.rs:12:1
   |
LL | #![doc(issue_tracker_base_url)]
   | ^^^^^^^----------------------^^
   |        |
   |        expected this to be of the form `issue_tracker_base_url = "..."`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #![doc(issue_tracker_base_url)]
LL + #![doc = "string"]
   |
LL - #![doc(issue_tracker_base_url)]
LL + #![doc(hidden)]
   |
LL - #![doc(issue_tracker_base_url)]
LL + #![doc(inline)]
   |
LL - #![doc(issue_tracker_base_url)]
LL + #![doc(test)]
   |

error[E0539]: malformed `doc` attribute input
  --> $DIR/bad-render-options.rs:15:1
   |
LL | #![doc(html_favicon_url = 1)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^-^^
   |                           |
   |                           expected a string literal here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #![doc(html_favicon_url = 1)]
LL + #![doc = "string"]
   |
LL - #![doc(html_favicon_url = 1)]
LL + #![doc(hidden)]
   |
LL - #![doc(html_favicon_url = 1)]
LL + #![doc(inline)]
   |
LL - #![doc(html_favicon_url = 1)]
LL + #![doc(test)]
   |

error[E0539]: malformed `doc` attribute input
  --> $DIR/bad-render-options.rs:18:1
   |
LL | #![doc(html_logo_url = 2)]
   | ^^^^^^^^^^^^^^^^^^^^^^^-^^
   |                        |
   |                        expected a string literal here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #![doc(html_logo_url = 2)]
LL + #![doc = "string"]
   |
LL - #![doc(html_logo_url = 2)]
LL + #![doc(hidden)]
   |
LL - #![doc(html_logo_url = 2)]
LL + #![doc(inline)]
   |
LL - #![doc(html_logo_url = 2)]
LL + #![doc(test)]
   |

error[E0539]: malformed `doc` attribute input
  --> $DIR/bad-render-options.rs:21:1
   |
LL | #![doc(html_playground_url = 3)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-^^
   |                              |
   |                              expected a string literal here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #![doc(html_playground_url = 3)]
LL + #![doc = "string"]
   |
LL - #![doc(html_playground_url = 3)]
LL + #![doc(hidden)]
   |
LL - #![doc(html_playground_url = 3)]
LL + #![doc(inline)]
   |
LL - #![doc(html_playground_url = 3)]
LL + #![doc(test)]
   |

error[E0539]: malformed `doc` attribute input
  --> $DIR/bad-render-options.rs:24:1
   |
LL | #![doc(issue_tracker_base_url = 4)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-^^
   |                                 |
   |                                 expected a string literal here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #![doc(issue_tracker_base_url = 4)]
LL + #![doc = "string"]
   |
LL - #![doc(issue_tracker_base_url = 4)]
LL + #![doc(hidden)]
   |
LL - #![doc(issue_tracker_base_url = 4)]
LL + #![doc(inline)]
   |
LL - #![doc(issue_tracker_base_url = 4)]
LL + #![doc(test)]
   |

error[E0565]: malformed `doc` attribute input
  --> $DIR/bad-render-options.rs:27:1
   |
LL | #![doc(html_no_source = "asdf")]
   | ^^^^^^^^^^^^^^^^^^^^^^--------^^
   |                       |
   |                       didn't expect any arguments here
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL - #![doc(html_no_source = "asdf")]
LL + #![doc = "string"]
   |
LL - #![doc(html_no_source = "asdf")]
LL + #![doc(hidden)]
   |
LL - #![doc(html_no_source = "asdf")]
LL + #![doc(inline)]
   |
LL - #![doc(html_no_source = "asdf")]
LL + #![doc(test)]
   |

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0539, E0565.
For more information about an error, try `rustc --explain E0539`.
